# dyson-research

./: .zenodo.json  CITATION.cff  LICENSE  README.md
publications/: RESEARCH-ROADMAP.md  model-provenance-reconciliation.md  paper-readiness-matrix.csv  publication-assessment.md  wave-a-submission-prep.md  (+2 more)
publications/scripts/: LICENSE  README.md  aggregation_baseline.cjs  analyze_repeated_trials.py  deliberation_analysis.py  dvb_rcs2_benchmark.py  extended_copula_sensitivity.py  ge_parameter_anchoring.py  generate-isru-figures.py  generate_consensus_figures.py  generate_isru_figures.py  generate_ns3_validation_fig.py  generate_swarm_figures.py  isru_mc.py  isru_model.py  link_budget.py  ns3_result_analysis.py  orbital_reassociation.py  packet_level_tdma.py  paper03_quality_eval.cjs  peer-review-paper.js  pyproject.toml  recount_baseline.cjs  requirements.txt  run_controlled_baselines.cjs  run_joint_experiment.py  run_joint_experiment2.py  run_repeated_trials.js  run_table_sweeps.py  run_winner_hidden_ablation.cjs  self_refinement_baseline.cjs  similarity_data.csv  swarm_mc.py  swarm_model.py  table_sweep_results.json  tdma_alternative_designs.py  tdma_slot_sim.py  transcript_similarity.py  water_extraction_mc.py  water_extraction_model.py
publications/scripts/tests/: conftest.py  test_deliberation_analysis.py  test_isru_mc.py  test_isru_model.py  test_isru_science.py  test_link_budget.py  test_orbital_reassociation.py  test_packet_level_tdma.py  test_swarm_mc.py  test_swarm_model.py  test_tdma_alternative_designs.py  test_tdma_slot_sim.py  test_water_extraction.py
(+1017 files in other folders)
