[project]
name = "isru-economic-crossover"
version = "1.0.0"
description = "Parametric cost model and Monte Carlo engine for ISRU economic crossover analysis"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.4",
    "scipy>=1.17",
    "matplotlib>=3.10",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
