[project]
name = "dyson-publication-scripts"
version = "1.0.0"
description = "Simulation and analysis code for Project Dyson research papers"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.4",
    "scipy>=1.17",
    "matplotlib>=3.10",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
